--- a/example/package.json
+++ b/example/package.json
@@ -16,9 +16,9 @@
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
   },
   "devDependencies": {
-    "@types/react": "^16.9.11",
+    "@types/react": "^16.14.11",
     "@types/react-dom": "^16.8.4",
-    "parcel": "^1.12.3",
+    "parcel": "2.0.0-beta.2",
     "typescript": "^3.4.5"
   }
 }
